--- a/css/style.css
+++ b/css/style.css
@@ -581,6 +581,8 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -594,7 +596,12 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
   background-color: #FFFFFF;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
 }
 
 .modal-close {
@@ -610,4 +617,10 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
   justify-content: center;
   background-color: transparent;
 
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
