--- a/css/style.css
+++ b/css/style.css
@@ -173,8 +173,7 @@ img {
 }
 .hero-btn:hover,
 .hero-btn:focus {
-  background-color: #188CE8;
-
+  background-color: #188ce8;
 }
 /*-----------------------Properties--------------------------------*/
 .properties {
@@ -196,17 +195,17 @@ img {
 .properties-list {
   display: flex;
   align-items: flex-start;
-  justify-content: space-between; 
-  gap: 30px; 
+  justify-content: space-between;
+  gap: 30px;
 }
 .propert-list-item {
-display: flex;
-justify-content: center;
-align-items: center;
-background-color: #f5f4fa;
-width: 270px;
-height: 120px;
-margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f4fa;
+  width: 270px;
+  height: 120px;
+  margin-bottom: 30px;
 }
 .properties-title {
   margin-bottom: 10px;
@@ -237,23 +236,22 @@ margin-bottom: 30px;
   position: relative;
 }
 .gallery-img-title {
-position: absolute;
-bottom: 0;
-margin: 0;
-height: 70px;
-width: 370px;
-text-align: center;
-padding-top: 27px;
-padding-bottom: 27px;
-font-weight: 700;
+  position: absolute;
+  bottom: 0;
+  margin: 0;
+  height: 70px;
+  width: 370px;
+  text-align: center;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #FFFFFF;
-background-color: rgba(47, 48, 58, 0.8);;
-
+  color: #ffffff;
+  background-color: rgba(47, 48, 58, 0.8);
 }
 
 /*-----------------------Company-----------------------------------*/
@@ -317,7 +315,7 @@ background-color: rgba(47, 48, 58, 0.8);;
   justify-content: center;
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+}
 
 .soc-link-icon {
   fill: #afb1b8;
@@ -365,7 +363,8 @@ background-color: rgba(47, 48, 58, 0.8);;
   margin-right: 0;
 }
 .customers-link:focus .customers-icon {
-  fill: var(--brand-color);}
+  fill: var(--brand-color);
+}
 .customers-link:hover .customers-icon {
   fill: var(--brand-color);
 }
@@ -467,7 +466,6 @@ background-color: rgba(47, 48, 58, 0.8);;
 }
 .footer-soc-link {
   background-color: rgba(255, 255, 255, 0.1);
-
 }
 
 .footer-icon {
@@ -499,8 +497,8 @@ background-color: rgba(47, 48, 58, 0.8);;
   cursor: pointer;
   border-radius: 4px;
   border-color: transparent;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button:hover,
 .button:focus {
@@ -520,13 +518,12 @@ background-color: rgba(47, 48, 58, 0.8);;
   margin-top: 34px;
 }
 .portfolio-list .item {
-
   margin-right: 30px;
   margin-bottom: 30px;
   width: 370px;
   background-color: #ffffff;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1)
- }
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -545,17 +542,17 @@ background-color: rgba(47, 48, 58, 0.8);;
   overflow: hidden;
 }
 .portfolio-text {
-position: absolute;
-top: 0;
-height: 100%;
-padding: 63px 24px;
-font-size: 18px;
-line-height: 1.55;
-color: #FFFFFF;
-transform: translateY(100%);
-background-color: rgba(33, 150, 243, 0.9);
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  position: absolute;
+  top: 0;
+  height: 100%;
+  padding: 63px 24px;
+  font-size: 18px;
+  line-height: 1.55;
+  color: #ffffff;
+  transform: translateY(100%);
+  background-color: rgba(33, 150, 243, 0.9);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .work {
@@ -582,7 +579,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -591,15 +588,16 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
   min-height: 581px;
   top: 50%;
   left: 50%;
-  background-color: #FFFFFF;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transform: translate(-50%,-50%) scale(1);
+  transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0);
+  transform: translate(-50%, -50%) scale(1.5);
 }
 
 .modal-close {
@@ -614,9 +612,14 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
   align-items: center;
   justify-content: center;
   background-color: transparent;
-
+  cursor: pointer;
 }
-
+.modal-close-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: #000000;
+}
 .is-hidden {
   opacity: 0;
   visibility: hidden;
