--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,13 @@ img {
   color: var(--nav-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.nav-list-item::after {
+  margin-top: 28px;
+  content: "";
+  
+}
+
 .nav-list-item:hover,
 .nav-list-item:focus {
   color: var(--brand-color);
