--- a/css/style.css
+++ b/css/style.css
@@ -76,12 +76,14 @@ img {
 }
 .nav-list {
   display: flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
   align-items: center;
   gap: 50px;
 }
 .nav-list-item {
+  position: relative;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  display: flex;
   font-weight: 500;
   line-height: 1.3333;
   letter-spacing: 0.02em;
@@ -91,10 +93,20 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-list-item::after {
-  margin-top: 28px;
+.current::after {
   content: "";
-  
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 4px;
+  left: 0;
+  bottom: 0;
+  background-image: url(../images/hover-nav.svg);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  border-radius: 2px;
+  /* transform: translateY(32px); */
+
 }
 
 .nav-list-item:hover,
