--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ img {
 }
 
 .current::after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   width: 100%;
@@ -106,7 +106,6 @@ img {
   background-position: bottom;
   border-radius: 2px;
   /* transform: translateY(32px); */
-
 }
 
 .nav-list-item:hover,
